# leo-examples

./: README.md
basic_bank/: .env  run.sh
battleship/: .env
battleship/board/src/: main.leo
battleship/src/: main.leo
bubblesort/: README.md
bubblesort/inputs/: bubblesort.in
bubblesort/src/: main.leo
calculator/: program.json
calculator/src/: calculator.leo  main.leo
calculator/tests/: test_modules.leo
core/inputs/: core.in
erc20/: Leo.toml  README.md
erc20/inputs/: erc20.in  erc20.state
erc20/src/: main.leo  record.leo  token_no_approvals.leo  token_v1.leo  token_with_approvals.leo  token_without_approvals.leo  transaction.leo  transition.leo
example_with_test/: README.md  main.leo
example_with_test/src/: main.leo
example_with_test/tests/: test_example_program.leo
interest/inputs/: bounded.in  fixed.in
message/inputs/: message.in
nft/: Leo.toml  README.md
nft/inputs/: nft.in  nft.state
nft/src/: main.leo
simple_token/inputs/: mint.in  transfer.in
tests/tests/: test_example_program.leo
tictactoe/inputs/: tictactoe.in
upgrades/: 00_setup.md  01_noupgrade.md  02_admin.md  03_timelock.md  04_vote.md
upgrades/admin/: program.json
upgrades/admin/sign-deployment/: Cargo.toml
upgrades/admin/sign-deployment/src/: main.rs
upgrades/admin_example/: program.json
upgrades/noupgrade/: program.json
upgrades/noupgrade_example/: program.json
upgrades/timelock/: program.json
upgrades/timelock_example/: program.json
upgrades/vote/: program.json
vote/inputs/: disagree.in  new_ticket.in  propose.in
(+18 files in other folders)
