[package]
name = "sign-deployment"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core snarkVM dependencies
snarkvm = { git = "https://github.com/ProvableHQ/snarkVM", rev = "a4573a3" }
snarkvm-synthesizer = { git = "https://github.com/ProvableHQ/snarkVM", rev = "a4573a3" }

# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Random number generation
rand = "0.8"

# File I/O utilities
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
